applications/harbor/base/ingress-ext.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: webext,websecureext
  name: harbor-ingress-ext
spec:
  ingressClassName: traefik
  rules:
    - host: harbor.sbling.net
      http:
        paths:
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /v2/
            pathType: Prefix
  tls:
    - hosts:
        - harbor.sbling.net
      secretName: harbor-sbling-net-prod-cert
