applications/harbor/base/database.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cnpg-operator
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: harbor-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring-system
            app.kubernetes.io/name: prometheus
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-operator
  egress:
    - toEntities:
        - kube-apiserver
